# CppInstallTest

./: .gitignore  CMakeLists.txt  Readme.md
Console/: CMakeLists.txt
GoogleTest/: Adder.h  CMakeLists.txt
GoogleTest/Tests/: Simple.cpp
